PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Add DivideResultDivisor to result parser

Phoronix Test Suite 8.2.0 Milestone 1
21 July 2018

pts-core: Add readline-based autocompletion support for text-based menu selection lists
pts-core: Add readline-based autocompletion support for the result file save name for trying to match existing result file identifiers
pts-core: Add autocompletion support for result file identifier based on installed software/hardware
pts-core: Various Alpine Linux external dependency updates
pts-core: Various improvements to the Shell sub-command functionality, including auto-completion support
phoromatic: From rootadmin allow the rootadmin to override/reset a user account password
phodevi: Windows battery reporting discharge rate support
phodevi: Improved multi CPU socket reporting on Windows
phodevi: Various hardware/software detection improvements when running within Docker/containers
pgo: New module to provide for automated compiler PGO (Profile Guided Optimizations) testing on GCC/Clang

Phoronix Test Suite 8.0.1-Aremark
26 June 2018

pts-core: Add "wine" external dependency support
pts-core: Fix skip-test behavior
pts-core: Web browser handling improvements on Windows, other Windows updates
phoromatic: Various minor fixes and enhancements
phodevi: Add USE_WINE environment variable check, point it towards the wine binary you wish to test

Phoronix Test Suite 8.0.0-Aremark
5 June 2018

pts-core: Various macOS support tweaks/improvements
pts-core: Add external dependency support for Brew macOS package manager
pts-core: Avoid duplicate test identifiers on graphs
phodevi: Improved X.Org Server version detection

Phoronix Test Suite 8.0.0 Milestone 5
30 May 2018

pts-core: Termux external dependency support
pts-core: Other minor tweaks and changes
phoromatic: Better handling when the Phoromatic Server is run without an Internet connection or Internet disabled