@@ -3,6 +3,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite (Git)
 
 pts-core: Add DivideResultDivisor to result parser
+pts-core: Add libevent as possible external dependency
 
 Phoronix Test Suite 8.2.0 Milestone 1
 21 July 2018
